test/compilable/rdmd_simple.d
// COMPILER: rdmd
// PERMUTE_ARGS:

void main()
{
}
