test/fail_compilation/fail113.d
// 370

void test( typeof(test) p) { }
